app/assets/stylesheets/components/_banner.scss
// Home page banner

.banner {
  position: relative;
  height: 100vh;
  padding: 0 10rem;
  display: flex;
  align-items: center;
  background-image: linear-gradient($background-offwhite 30%, #ebe4f9 80%);
  background-size: 120%;
  background-position: center;
}

.banner-image-wrapper {
  height: 100%;
  width: 100%;
  display: flex;
  align-items: flex-end;
  margin-left: 10rem;
}

.banner-image {
  height: 110%;
}

.banner-content-box {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  text-align: left;
  margin-left: -10rem;
  margin-top: -10rem;
  padding: 5rem;
  z-index: 1;
  max-width: 35rem;
  width: 100%;

  .banner-header {
    margin: 0;
    font-size: 4rem;
    font-weight: lighter;
  }
}

.banner-buttons {
  display: flex;
  justify-content: center;
  gap: 2rem;
  margin: .5rem;
}

.banner-logo {
  margin: 2rem;
  width: 10rem;
}

.animated-text-container {
  display: inline-block;
  position: relative;
  height: 53px;
}

.animated-text-wrapper {
  position: absolute;
  height: 60px;
  overflow: hidden;
  text-wrap: nowrap;
}

.animated-text {
  display: inline-block;
}



@media screen and (max-width: 749px) {
  .banner {
    width: 100%;
    height: fit-content;
    // margin-top: 2rem;
    flex-direction: column-reverse;
    padding: 0 0 0;
    overflow: hidden;
  }

  .banner-image-wrapper {
    margin-left: 0;
    width: auto;
  }

  .banner-image {
    width: 100%;
    height: 100%;
    transform: translateX(4rem) translateY(-2rem);
  }

  .banner-content-box {
    margin: 0;
    padding: 0 2rem;
    justify-content: inherit;
    align-items: center;
    gap: 1rem;
    width: auto;

    .banner-header {
      font-size: 2.25rem;
      line-height: 2.5rem;
    }

    .banner-sub-header {
      display: none;
      font-size: 1.55rem
    }

    .btn {
      align-self: center;
      font-size: 1rem;
    }
  }

  .animated-text-container {
    height: 32px;
  }

  .animated-text-wrapper {
    height: 40px;
  }
}

